--- a/app/src/main/res/layout/content_crop_best_practices_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_best_practices_dashboard.xml
@@ -590,6 +590,101 @@
                             android:textColor="#000000" />
                     </LinearLayout>
                 </LinearLayout>
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:background="@color/whiteColor"
+                        android:onClick="openCoffeeBestPractices"
+                        android:orientation="vertical"
+                        android:paddingBottom="5dp">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="70dp"
+                            android:padding="10dp"
+
+                            android:src="@drawable/coffee" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="top"
+                            android:background="@color/whiteColor"
+                            android:gravity="center"
+                            android:paddingBottom="5dp"
+                            android:text="Coffee"
+                            android:textAllCaps="true"
+                            android:textColor="#000000" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:onClick="openRiceBestPractices"
+                        android:orientation="vertical"
+                        android:paddingBottom="5dp">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="70dp"
+                            android:padding="10dp"
+
+                            android:src="@drawable/rice" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="top"
+                            android:background="@color/whiteColor"
+                            android:gravity="center"
+                            android:paddingBottom="5dp"
+                            android:text="Rice"
+                            android:textAllCaps="true"
+                            android:textColor="#000000" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:onClick="openBananaBestPractices"
+
+                        android:orientation="vertical"
+                        android:paddingBottom="5dp">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="70dp"
+                            android:padding="10dp"
+
+                            android:src="@drawable/banana" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="top"
+                            android:background="@color/whiteColor"
+                            android:gravity="center"
+                            android:paddingBottom="5dp"
+                            android:text="Banana"
+                            android:textAllCaps="true"
+                            android:textColor="#000000" />
+                    </LinearLayout>
+                </LinearLayout>
 
 
             </LinearLayout>
