--- a/app/src/main/res/layout/content_crop_machine_task_manager.xml
+++ b/app/src/main/res/layout/content_crop_machine_task_manager.xml
@@ -73,8 +73,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:background="@drawable/input_shapes_grey"
-
+                        android:background="@drawable/input_shapes"
+                        android:textSize="14sp"
+                        android:hint="Enter.."
                         />
 
                 </LinearLayout>
