--- a/app/src/main/res/layout/activity_crop_income_expenses_list.xml
+++ b/app/src/main/res/layout/activity_crop_income_expenses_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 android:orientation="vertical"
 
-    android:background="@color/light_gray"
+    android:background="#F4F4F4"
 
     tools:context=".activities.CropIncomeExpensesListActivity">
 
