--- a/app/src/main/res/layout/activity_crop_tasks_list.xml
+++ b/app/src/main/res/layout/activity_crop_tasks_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/light_gray"
+    android:background="#F4F4F4"
     tools:context=".activities.CropTasksListActivity">
 
 
