--- a/app/src/main/res/layout/content_crop_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_dashboard.xml
@@ -101,8 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/mainView"
-                android:background="@drawable/
-">
+                android:background="@drawable/home_background">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -138,7 +137,7 @@
                                 <ImageView
                                     android:layout_width="100dp"
                                     android:layout_height="90dp"
-                                    android:background="@color/whiteColor"
+                                    android:background="@drawable/background_round_white"
                                     android:padding="20dp"
                                     android:src="@drawable/fields" />
 
@@ -170,7 +169,7 @@
                                 <ImageView
                                     android:layout_width="100dp"
                                     android:layout_height="90dp"
-                                    android:background="@color/whiteColor"
+                                    android:background="@drawable/background_round_white"
                                     android:padding="20dp"
                                     android:src="@drawable/crops" />
 
@@ -206,7 +205,7 @@
                                 <ImageView
                                     android:layout_width="100dp"
                                     android:layout_height="90dp"
-                                    android:background="@color/whiteColor"
+                                    android:background="@drawable/background_round_white"
                                     android:padding="20dp"
                                     android:src="@drawable/inventory" />
 
@@ -247,7 +246,7 @@
                                 <ImageView
                                     android:layout_width="100dp"
                                     android:layout_height="90dp"
-                                    android:background="@color/whiteColor"
+                                    android:background="@drawable/background_round_white"
                                     android:padding="20dp"
                                     android:src="@drawable/machinery" />
 
@@ -280,7 +279,7 @@
                                 <ImageView
                                     android:layout_width="100dp"
                                     android:layout_height="90dp"
-                                    android:background="@color/whiteColor"
+                                    android:background="@drawable/background_round_white"
                                     android:padding="20dp"
                                     android:src="@drawable/contacts" />
 
@@ -312,7 +311,7 @@
                                     android:layout_width="100dp"
                                     android:layout_height="90dp"
                                     android:padding="20dp"
-                                    android:background="@color/whiteColor"
+                                    android:background="@drawable/background_round_white"
                                     android:src="@drawable/tasks_icon" />
 
                                 <TextView
@@ -349,7 +348,7 @@
                                     android:layout_width="100dp"
                                     android:layout_height="90dp"
                                     android:padding="20dp"
-                                    android:background="@color/whiteColor"
+                                    android:background="@drawable/background_round_white"
                                     android:src="@drawable/income_expenses_two" />
 
                                 <TextView
@@ -379,7 +378,7 @@
                                 <ImageView
                                     android:layout_width="100dp"
                                     android:layout_height="90dp"
-                                    android:background="@color/whiteColor"
+                                    android:background="@drawable/background_round_white"
                                     android:padding="20dp"
                                     android:src="@drawable/farm_calculator_two" />
 
@@ -411,7 +410,7 @@
                                 <ImageView
                                     android:layout_width="100dp"
                                     android:layout_height="90dp"
-                                    android:background="@color/whiteColor"
+                                    android:background="@drawable/background_round_white"
                                     android:padding="20dp"
                                     android:src="@drawable/best_practices_second" />
 
