--- a/app/src/main/res/layout/content_crop_machine_services_list.xml
+++ b/app/src/main/res/layout/content_crop_machine_services_list.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F4F4F4"
     tools:context=".activities.CropMachineServicesListActivity"
     tools:showIn="@layout/activity_crop_machine_services_list">
     <ScrollView
