--- a/app/src/main/res/layout/content_crop_machine_tasks_list.xml
+++ b/app/src/main/res/layout/content_crop_machine_tasks_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F4F4F4"
     tools:context=".activities.CropMachineTasksListActivity"
     tools:showIn="@layout/activity_crop_machine_tasks_list">
     <ScrollView
