--- a/app/src/main/res/layout/crop_contact_list_card.xml
+++ b/app/src/main/res/layout/crop_contact_list_card.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#F4F4F4">
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_margin="15dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="10dp"
         android:padding="10dp"
         android:background="@drawable/input_shapes_crops_card"
         android:layout_width="match_parent"
