--- a/app/src/main/res/layout/crop_inventory_list_card.xml
+++ b/app/src/main/res/layout/crop_inventory_list_card.xml
@@ -7,7 +7,6 @@
     android:background="#F4F4F4"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_marginBottom="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     >
@@ -31,7 +30,7 @@
                     android:background="@drawable/input_shapes_crops_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_marginTop="10dp"
                     >
 
                     <LinearLayout
