--- a/app/src/main/res/layout/crop_notes_list_card.xml
+++ b/app/src/main/res/layout/crop_notes_list_card.xml
@@ -41,14 +41,14 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="5dp"
             android:layout_weight="0.1"
+            android:background="@drawable/input_shapes_crops_card"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:background="@drawable/crop_card_border"
-                android:orientation="vertical"
+               android:orientation="vertical"
                 android:padding="15dp">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -72,6 +72,7 @@
                             android:id="@+id/txt_view_crop_notes_card_category"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:gravity="center"
                             android:layout_weight="0.3"
                             android:text="Maintenance"
                             android:textSize="17dp"
