--- a/app/src/main/res/layout/crop_task_list_card.xml
+++ b/app/src/main/res/layout/crop_task_list_card.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="#F4F4F4"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
@@ -10,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="0dp"
-        android:layout_margin="12dp">
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="10dp">
 
 
 
