--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,104 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:n1="http://schemas.android.com/apk/res/android"
-    n1:layout_width="fill_parent"
-    n1:layout_height="fill_parent"
-    n1:background="@drawable/sign_in_background"
-    n1:tag="layout/sign_in_0"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/sign_in_background"
+    android:tag="layout/sign_in_0"
     >
 
     <LinearLayout
-        n1:layout_width="fill_parent"
-        n1:layout_height="wrap_content"
-        n1:layout_centerInParent="true"
-        n1:orientation="vertical">
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
 
         <ImageView
-            n1:layout_width="wrap_content"
-            n1:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             />
 
         <TextView
-            n1:layout_width="fill_parent"
-            n1:layout_height="wrap_content"
-            n1:gravity="center"
-            n1:text="Sign In"
-            n1:textColor="@color/whiteColor"
-            n1:textSize="30.0sp"
-            n1:drawableTop="@drawable/logo_crop_manager"/>
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Sign In"
+            android:textColor="@color/whiteColor"
+            android:textSize="30.0sp"
+            android:drawableTop="@drawable/logo_crop_manager"/>
+
         <LinearLayout
-            n1:layout_width="fill_parent"
-            n1:layout_height="fill_parent"
-            n1:layout_marginLeft="20.0dip"
-            n1:layout_marginRight="20.0dip"
-            n1:layout_marginTop="50.0dip"
-            n1:orientation="vertical">
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="20.0dip"
+            android:layout_marginRight="20.0dip"
+            android:layout_marginTop="50.0dip"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/text_view_crop_user_error"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="This ie the error we have found at the server end"
+                android:textColor="@color/yellow"
+                android:visibility="gone"/>
 
             <EditText
-                n1:id="@+id/edtusername"
-                n1:layout_width="fill_parent"
-                n1:singleLine="true"
-                n1:layout_height="45.0dip"
-                n1:background="@drawable/rectangle_border"
-                n1:drawableLeft="@drawable/mail"
-                n1:drawablePadding="20.0dip"
-                n1:hint="Email"
-                n1:textCursorDrawable="@drawable/color_cursor"
-                n1:padding="10.0dip"
-                n1:textColor="@color/whiteColor"
-                n1:textColorHint="@color/hintColor" />
+                android:id="@+id/edtusername"
+                android:layout_width="fill_parent"
+                android:singleLine="true"
+                android:layout_height="45.0dip"
+                android:background="@drawable/rectangle_border"
+                android:drawableLeft="@drawable/mail"
+                android:drawablePadding="20.0dip"
+                android:hint="Email or Phone Number"
+                android:textCursorDrawable="@drawable/color_cursor"
+                android:padding="10.0dip"
+                android:textColor="@color/whiteColor"
+                android:textColorHint="@color/hintColor" />
 
             <EditText
-                n1:id="@+id/edtpwd"
+                android:id="@+id/edtpwd"
 
-                n1:layout_width="fill_parent"
-                n1:layout_height="45.0dip"
-                n1:singleLine="true"
-                n1:layout_marginTop="35.0dip"
-                n1:background="@drawable/rectangle_border"
-                n1:drawableLeft="@drawable/password"
-                n1:drawablePadding="20.0dip"
-                n1:hint="Password"
-                n1:textCursorDrawable="@drawable/color_cursor"
-                n1:inputType="textPassword"
-                n1:padding="10.0dip"
-                n1:textColor="@color/whiteColor"
-                n1:textColorHint="@color/hintColor" />
+                android:layout_width="fill_parent"
+                android:layout_height="45.0dip"
+                android:singleLine="true"
+                android:layout_marginTop="35.0dip"
+                android:background="@drawable/rectangle_border"
+                android:drawableLeft="@drawable/password"
+                android:drawablePadding="20.0dip"
+                android:hint="Password"
+                android:textCursorDrawable="@drawable/color_cursor"
+                android:inputType="textPassword"
+                android:padding="10.0dip"
+                android:textColor="@color/whiteColor"
+                android:textColorHint="@color/hintColor" />
 
             <TextView
-                n1:id="@+id/tvForgetPass"
-                n1:layout_width="fill_parent"
-                n1:layout_height="wrap_content"
-                n1:layout_marginTop="10.0dip"
-                n1:layout_marginBottom="20.0dip"
-                n1:gravity="end"
-                n1:text="Forgot Password?"
-                n1:textColor="@color/hintColor"
-                n1:textSize="16.0sp"
-                n1:textStyle="italic"
-                n1:typeface="sans" />
+                android:id="@+id/tvForgetPass"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10.0dip"
+                android:layout_marginBottom="20.0dip"
+                android:gravity="end"
+                android:text="Forgot Password?"
+                android:textColor="@color/hintColor"
+                android:textSize="16.0sp"
+                android:textStyle="italic"
+                android:typeface="sans" />
 
             <Button
-                n1:id="@+id/btnSignIn"
-                n1:layout_width="fill_parent"
-                n1:layout_height="45.0dip"
-                n1:layout_margin="10.0dip"
-                n1:background="@drawable/sign_up_button"
-                n1:text="Sign in"
-                n1:textAllCaps="false"
-                n1:textColor="@color/submitBtnColor"
-                n1:textSize="18.0sp"
-                n1:textStyle="bold"
-                n1:typeface="sans" />
+                android:id="@+id/btnSignIn"
+                android:layout_width="fill_parent"
+                android:layout_height="45.0dip"
+                android:layout_margin="10.0dip"
+                android:background="@drawable/sign_up_button"
+                android:text="Sign in"
+                android:textAllCaps="false"
+                android:textColor="@color/submitBtnColor"
+                android:textSize="18.0sp"
+                android:textStyle="bold"
+                android:typeface="sans" />
 
             <TextView
-                n1:id="@+id/tvSignUp"
-                n1:layout_width="fill_parent"
-                n1:layout_height="wrap_content"
-                n1:layout_margin="15.0dip"
-                n1:gravity="center"
-                n1:text="Don't have an account? Sign Up!"
-                n1:textColor="@color/hintColor"
-                n1:textSize="16.0sp" />
+                android:id="@+id/tvSignUp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15.0dip"
+                android:gravity="center"
+                android:text="Don't have an account? Sign Up!"
+                android:textColor="@color/hintColor"
+                android:textSize="16.0sp" />
         </LinearLayout>
     </LinearLayout>
 
