--- a/app/src/main/res/layout/content_crop_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_dashboard.xml
@@ -101,8 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/mainView"
-                android:background="@drawable/
-">
+                android:background="@drawable/home_background">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
