--- a/app/src/main/res/layout/crop_irrigation_list_card.xml
+++ b/app/src/main/res/layout/crop_irrigation_list_card.xml
@@ -27,7 +27,7 @@
             <View
                 android:id="@+id/txt_view_crop_irrigation_card_line"
                 android:layout_width="1dp"
-                android:layout_height="260dp"
+                android:layout_height="325dp"
                 android:layout_marginStart="16dp"
                 android:background="#E7EAE7"
                 android:textAlignment="center" />
@@ -214,6 +214,7 @@
                     >
 
                         <TextView
+                            android:id="@+id/txt_view_crop_irrigation_card_quantity_per_acre_label"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="28dp"
