--- a/app/src/main/res/layout/crop_fertilizer_application_list_card.xml
+++ b/app/src/main/res/layout/crop_fertilizer_application_list_card.xml
@@ -20,7 +20,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="0.9"
             android:orientation="vertical">
 
@@ -35,7 +35,7 @@
             <View
                 android:id="@+id/txt_view_crop_fertilizer_application_card_line"
                 android:layout_width="1dp"
-                android:layout_height="match_parent"
+                android:layout_height="250dp"
                 android:layout_marginStart="16dp"
                 android:background="#E7EAE7"
                 android:textAlignment="center" />
