--- a/app/src/main/res/layout/activity_crop_harvest_manager.xml
+++ b/app/src/main/res/layout/activity_crop_harvest_manager.xml
@@ -299,7 +299,7 @@
 
 
                         <TextView
-
+                            android:id="@+id/txt_crop_harvest_currency_2"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:padding="4dp"
