--- a/app/src/main/res/layout/activity_crop_customer_manager.xml
+++ b/app/src/main/res/layout/activity_crop_customer_manager.xml
@@ -234,6 +234,7 @@
 
 
                         <TextView
+                            android:id="@+id/txt_crop_customer_currency"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:padding="4dp"
