--- a/app/src/main/res/layout/activity_crop_supplier_manager.xml
+++ b/app/src/main/res/layout/activity_crop_supplier_manager.xml
@@ -231,17 +231,19 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:background="@color/gray_mh">
+                        >
 
 
                         <TextView
+                            android:id="@+id/txt_crop_supplier_currency"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:padding="4dp"
                             android:labelFor="@+id/txt_crop_spray_rate"
                             android:text="@string/ugx"
                             android:gravity="center_vertical"
-                            
+                            android:textColor="@color/colorPrimary"
+                            android:background="@drawable/input_shapes_grey_units"
 
                             />
                         <EditText
