--- a/app/src/main/res/layout/crop_record_payment_invoice.xml
+++ b/app/src/main/res/layout/crop_record_payment_invoice.xml
@@ -25,16 +25,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/amount_received"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:textColor="@color/colorPrimary"
+                    android:textSize="15sp"
+                    android:textColor="@color/textColor"
                     />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    android:background="@color/gray_mh"
                     android:layout_marginBottom="10dp">
 
                     <TextView
@@ -44,8 +42,9 @@
                         android:text="@string/ugx"
                         android:layout_weight="0.1"
                         android:textSize="14sp"
+                        android:background="@drawable/input_shapes_grey_units"
                         android:textAlignment="center"
-                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"
                         android:gravity="center_vertical"
 
                         />
@@ -82,9 +81,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/payment_date"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp" />
+                        android:textSize="15sp"
+                        android:textColor="@color/textColor" />
 
                     <EditText
                         android:id="@+id/txt_crop_record_payment_invoice_date"
@@ -115,9 +113,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/payment_number"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
+                        android:textSize="15sp"
+                        android:textColor="@color/textColor"
                         android:layout_weight="1"
                         />
 
@@ -155,9 +152,8 @@
                         android:layout_height="wrap_content"
                         android:text="@string/payment_mode"
 
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp" />
+                        android:textSize="15sp"
+                        android:textColor="@color/textColor"/>
 
                     <Spinner
                         android:id="@+id/txt_crop_record_payment_invoice_payment_mode"
@@ -187,9 +183,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/reference_number"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
+                        android:textSize="15sp"
+                        android:textColor="@color/textColor"
                         />
 
                     <EditText
@@ -219,9 +214,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/notes"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:textColor="@color/colorPrimary"
+                    android:textSize="15sp"
+                    android:textColor="@color/textColor"
                     />
 
 
