--- a/app/src/main/res/layout/crop_record_payment_received.xml
+++ b/app/src/main/res/layout/crop_record_payment_received.xml
@@ -18,13 +18,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="10dp"
-                android:layout_marginRight="10dp">
+                android:layout_marginEnd="20dp">
 
                 <TextView
 
@@ -33,7 +33,6 @@
                     android:text="@string/payment_date"
                     android:layout_weight="0.6"
                     android:textColor="@color/textColor"
-                    android:textStyle="bold"
                     android:textSize="16sp" />
 
                 <EditText
@@ -56,7 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="10dp">
+                >
 
 
                 <TextView
@@ -65,7 +64,6 @@
                     android:layout_height="wrap_content"
                     android:text="@string/payment_number"
                     android:textColor="@color/textColor"
-                    android:textStyle="bold"
                     android:textSize="16sp"
                     android:layout_weight="1"
                     />
@@ -91,7 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="10dp"
             >
 
             <TextView
@@ -100,7 +98,6 @@
                 android:layout_height="wrap_content"
                 android:text="Invoice"
                 android:textColor="@color/textColor"
-                android:textStyle="bold"
                 android:layout_weight="0.5"
                 android:textSize="16sp" />
 
@@ -136,7 +133,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="@string/customer_name"
-                android:textStyle="bold"
                 android:textSize="16sp"
                 android:textColor="@color/textColor"
                 />
@@ -164,22 +160,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_marginEnd="20dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/amount"
-                android:textStyle="bold"
                 android:textSize="16sp"
                 android:textColor="@color/textColor"
                 />
@@ -188,8 +184,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:background="@color/gray_mh"
-                android:layout_marginRight="10dp">
+
+                >
 
                 <TextView
                     android:id="@+id/txt_crop_payment_currency"
@@ -198,8 +194,9 @@
                     android:text="@string/ugx"
                     android:layout_weight="0.7"
                     android:textSize="14sp"
+                    android:textColor="@color/colorPrimary"
+                    android:background="@drawable/input_shapes_grey_units"
                     android:textAlignment="center"
-                    android:textStyle="bold"
                     android:gravity="center_vertical"
 
                     />
@@ -223,7 +220,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="10dp"
                 android:layout_weight="1">
 
 
@@ -233,7 +229,6 @@
                     android:layout_height="wrap_content"
                     android:text="@string/payment_mode"
                     android:textColor="@color/textColor"
-                    android:textStyle="bold"
                     android:textSize="16sp"
                     android:layout_weight="1"
                     />
@@ -260,14 +255,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="10dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/reference_number"
-                android:textStyle="bold"
                 android:textSize="16sp"
                 android:textColor="@color/textColor"
                 />
@@ -294,14 +289,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="10dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/notes"
-                android:textStyle="bold"
                 android:textSize="16sp"
                 android:textColor="@color/textColor"
                 />
