--- a/app/src/main/res/layout/activity_crop_bill_manager.xml
+++ b/app/src/main/res/layout/activity_crop_bill_manager.xml
@@ -47,7 +47,7 @@
                             android:layout_height="wrap_content"
                             android:background="@drawable/input_shapes_grey_spinner"
                             android:orientation="vertical"
-                            android:padding="2.4dp">
+                            android:padding="3.4dp">
                         <Spinner
                             android:id="@+id/spinner_crop_bill_supplier"
                             android:layout_width="match_parent"
@@ -146,7 +146,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:layout_margin="4dp">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -163,7 +164,7 @@
                             android:layout_height="wrap_content"
                             android:background="@drawable/input_shapes_grey_spinner"
                             android:orientation="vertical"
-                            android:padding="2.4dp">
+                            android:padding="3.4dp">
                         <Spinner
                             android:id="@+id/txt_crop_bill_terms"
                             android:layout_width="match_parent"
@@ -176,7 +177,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
+                        android:layout_margin="4dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
@@ -438,7 +439,7 @@
                             android:layout_marginEnd="8dp"
                             android:textAlignment="center"
                             android:textSize="18sp"
-                            
+
 
                             />
 
