--- a/app/src/main/res/layout/activity_crop_bill_preview.xml
+++ b/app/src/main/res/layout/activity_crop_bill_preview.xml
@@ -513,14 +513,15 @@
 
                     <TextView
 
+                        android:id="@+id/txt_view_crop_estimate_total_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
+
                         android:text="@string/total_ugx"
 
                         android:textColor="@color/textColor"
                         android:textSize="12sp"
-                         />
+                        />
 
                     <TextView
 
